--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ href="https://www.spm.in.net/p/privacy-policy.html" target="_blank">privacy poli
 
 font-size: 16px; border: none; cursor: pointer;" onclick="window.open
 
-('https://socj.info/wac', '_blank')">চ্যানেল নেম
+('https://socj.info/wac', '_blank')">View channel
 </button></p>
     </div>
 
