--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ href="https://www.spm.in.net/p/privacy-policy.html" target="_blank">privacy poli
 
 <p class="bengali-text" style="margin-bottom: +10px;">হোয়াটস-অ্যাপ নীচের বাটনে ক্লিক করুন: </p>
 
-<p style="margin-bottom: +50px;">
+<p class="english-text" style="margin-bottom: +50px;">
 <button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; 
 
 font-size: 16px; border: none; cursor: pointer;" onclick="window.open
