--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ type="text/javascript"></script>
 <BODY oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
     <div>
          <p class="english-text">You are being redirected to the URL to access:</p>
-<h3 class="bengali-text">"চ্যানেল নেম"</h3>
+<h3 class="english-text">"WhatsApp Channel of Siva Prasad Mukherjee"</h3>
 <p class="english-text">Before proceeding, please review our <a 
 
 href="https://www.spm.in.net/p/privacy-policy.html" target="_blank">privacy policy</a>. </p>
@@ -118,7 +118,7 @@ href="https://www.spm.in.net/p/privacy-policy.html" target="_blank">privacy poli
         </p>
 
 
-<p class="bengali-text" style="margin-bottom: +10px;">হোয়াটস-অ্যাপ নীচের বাটনে ক্লিক করুন: </p>
+<p class="bengali-text" style="margin-bottom: +10px;">শিবপ্রসাদ মুখার্জির হোয়াটসঅ্যাপ চ্যানেলটিকে ভিজিট ও ফলো করতে নীচের বাটনে ক্লিক করুন: </p>
 
 <p class="english-text" style="margin-bottom: +50px;">
 <button type="button" style="background-color: #4CAF50; color: white; padding: 10px 20px; 
